# TinyCompiler

./: .gitignore  CMakeLists.txt  README.md  projectStructure.md
TinyCompiler/: CMakeLists.txt  projectStructure.md
TinyCompiler/src/: globals.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  scanner.cpp  scanner.h  syntaxtreemodel.cpp  syntaxtreemodel.h  syntaxtreeview.cpp  syntaxtreeview.h  treenode.cpp  treenode.h
src/: codegen.cpp  codegen.h  globals.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  scanner.cpp  scanner.h  syntaxtreemodel.cpp  syntaxtreemodel.h  syntaxtreeview.cpp  syntaxtreeview.h  treenode.cpp  treenode.h
